Fixed alignment issue and centered items

--- a/src/app/firstpage/firstpage.component.css
+++ b/src/app/firstpage/firstpage.component.css
@@ -1,9 +1,10 @@
-div {
+div{
   display: flex;
   justify-content: center;
   align-items: center;
+ 
   gap: 20px;
-  margin-top: 50px;
+  margin-top: 200px;
 }
 
 button {
